--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Jumbotron ucapan selamat datang -->
   <div class="mt-3 p-3 bg-primary text-white rounded text-center">
     <h1>Selamat Datang</h1><br>
-    <img class="rounded-circle" src="logologin.jpg" alt="logo login" width="10%"><br>
+    <img class="rounded-circle" src="img/logologin.jpg" alt="logo login" width="10%"><br>
     <p class="mt-3">Silahkan Masukan User Name & Password Anda</p>
   </div>
 
